<resources>
    <string name="SERVER_IP">http://192.168.0.26:8080/</string>
    <string name="WEBSOCKETSERVER">ws://192.168.0.26:8080/ws</string>
    <string name="default_web_client">824690392585-3jlsellspmkihj6jjl42ahuvi7jig27i.apps.googleusercontent.com</string>
    <string name="app_name">Blaze</string>
    <string name="next">Siguiente</string>
    <string name="previous">Previous</string>
    <string name="sign_in_google">Ingresa con Google\n</string>
    <string name="sign_in_Facebook">Ingresa con Facebook\n</string>
    <string name="logoblaze">logoBlaze</string>
    <string name="blaze">Blaze</string>
    <string name="sign_in_Phone"> número de teléfono</string>
    <string name="policy">Al tocar \"Iniciar sesión\", acepta nuestros Términos y condiciones, conozca nuestra política de privacidad.</string>
    <string name="splashDescription">Logo blaze\n</string>
    <string name="phone_number">¿Puedes darnos tu número de teléfono?</string>
    <string name="phoneHint">3846785098</string>
    <string name="send">Enviar</string>
    <string name="send_code">Te enviaremos un codigo de verificación</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inserta_tu_c_digo_de_blaze">Inserta tu código de Blaze</string>
    <string name="verify">Verificar</string>
    <string name="verifyHint">Codigo Blaze</string>
    <string name="sign_up">Crear Cuenta</string>
    <string name="name">Nombre</string>
    <string name="save">Guardar</string>
    <string name="back">Cancelar</string>
    <string name="surname">Apellido</string>
    <string name="bithday">Cumpleaños</string>
    <string name="gender">Genero</string>
    <string name="masculine">Masculino</string>
    <string name="Femenine">Femenino</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="looking_foor">¿Que estás\n buscando?</string>
    <string name="male">Hombres</string>
    <string name="female">Mujeres</string>
    <string name="both">Ambos</string>
    <string name="no_specified">No Especificado</string>
    <string name="reesend_in_30">Reenviar en 30 segundos</string>
    <string name="resend_sms">Reenviar SMS</string>
    <string name="interest">Intereses</string>
    <string name="label">label</string>
    <string name="uploadImage">+</string>
    <string name="upload_photos">Sube tus fotos</string>
    <string name="blaze_logo">Blaze Logo</string>
    <string name="userimage">userImage</string>
    <string name="icon_heart">like</string>
    <string name="icon_cancel">nope</string>
    <string name="card_stack_view_description">tarjetas de usuarios</string>
    <string name="title_home">home</string>
    <string name="title_message">mensajes</string>
    <string name="title_business">perfil</string>
    <string name="upDescription">Mas sobre el usuario</string>
    <string name="email">Email</string>
    <string name="invalid_email">Email invalido</string>
    <string name="select_birthday">Fecha de Cumpleaños</string>
    <string name="passwords_dont_match">No existe match entre contraseñas</string>
    <string name="fill_all_fields">Todos los campos son obligatorios</string>
    <string name="notspecified">Inespecífico</string>
    <string name="blazeDB">http://192.168.0.26:8080/</string>
    <string name="clean_your_photos">Borrar</string>
    <string name="relationType">Relacion</string>
    <string name="profile_image">foto de perfil</string>
    <string name="edit_profile">editar perfil</string>
    <string name="theme_switch">theme_switch</string>
    <string name="message">Mensaje</string>
    <string name="matches">MATCHES</string>
    <string name="chats">CHATS</string>
    <string name="lookin_foor">Buscas Algo</string>
    <string name="update">Actualizar</string>
</resources>