<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_opacity"
    tools:context=".ui.login.Login">

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/logoBlaze"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/logoblaze"
                android:src="@drawable/blaze"
                android:layout_gravity="center_horizontal"
         />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/sansita_bold"
                android:gravity="center_vertical"
                android:text="@string/blaze"
                android:textColor="@color/white_opacity"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sansita_bold"
            android:gravity="center"
            android:text="@string/policy"
            android:textColor="@color/white_opacity"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>
        <!-- Botón de Google -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/singInGoogle"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/sansita_bold"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/sign_in_google"
            android:textColor="@color/white_opacity"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="16dp"
            app:icon="@drawable/googlesvg"
            app:strokeColor="@color/purple_primary"
            app:strokeWidth="2dp" />

        <!-- Botón de Facebook -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/singInFacebook"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/sansita_bold"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/sign_in_Facebook"
            android:textColor="@color/white_opacity"
            android:textSize="18sp"
            android:textStyle="bold"
            app:icon="@drawable/facebooksvg"
            app:cornerRadius="16dp"
            app:strokeColor="@color/purple_primary"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/singInPhone"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/sansita_bold"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/sign_in_Phone"
            android:textColor="@color/white_opacity"
            android:textSize="18sp"
            android:textStyle="bold"
            app:icon="@drawable/phone_svg_com"
            app:cornerRadius="16dp"
            app:strokeColor="@color/purple_primary"
            app:strokeWidth="2dp" />

    </LinearLayout>
</FrameLayout>
