<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_opacity"
    tools:context=".ui.signup.SignUp">

    <ScrollView
        android:id="@+id/scrollableSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fillViewport="true"
        tools:ignore="MissingConstraints,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/sansita_bold"
                android:text="@string/sign_up"
                android:textColor="@color/black_opacity"
                android:textSize="40sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_background"
                android:hint="@string/name"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/black_opacity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_background"
                    android:inputType="text"
                    android:textColor="@color/black_opacity"
                    android:textColorHint="@color/black_opacity" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_background"
                android:hint="@string/surname"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/black_opacity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_background"
                    android:inputType="text"
                    android:textColor="@color/black_opacity"
                    android:textColorHint="@color/black_opacity" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_background"
                android:hint="@string/email"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/black_opacity"
                app:endIconMode="custom"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_background"
                    android:inputType="text"
                    android:textColor="@color/black_opacity"
                    android:textColorHint="@color/black_opacity" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_background"
                android:hint="@string/bithday"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/black_opacity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_background"
                    android:inputType="date"
                    android:focusable="false"
                    android:clickable="true"
                    android:textColor="@color/black_opacity"
                    android:textColorHint="@color/black_opacity" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/sansita_bold"
                android:text="@string/gender"
                android:textColor="@color/black_opacity"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                   android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:padding="10dp"
                    android:text="@string/masculine"
                    android:textColor="@color/black_opacity"
                    android:fontFamily="@font/sansita_regular"

                    />


                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/Femenine"
                    android:textColor="@color/black_opacity"
                    android:fontFamily="@font/sansita_regular"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:padding="10dp"
                    android:text="@string/notspecified"
                    android:textColor="@color/black_opacity"
                    android:fontFamily="@font/sansita_regular"

                    />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_background"
                android:hint="@string/fui_password_hint"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/black_opacity"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black_opacity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_background"
                    android:inputType="textPassword"
                    android:textColor="@color/black_opacity"
                    android:textColorHint="@color/black_opacity" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_background"
                android:hint="@string/confirm_password"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/black_opacity"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black_opacity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_background"
                    android:inputType="textPassword"
                    android:textColor="@color/black_opacity"
                    android:textColorHint="@color/black_opacity" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_save"
                style="@style/RoundedButtonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="16dp"
                android:text="@string/save"
                android:textSize="16sp"
                app:cornerRadius="16dp"
                android:layout_marginTop="25dp"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
