<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_opacity"
    tools:context=".ui.lookingfoor.LookingFoor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sansita_bold"
            android:text="@string/looking_foor"
            android:textColor="@color/black_opacity"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearGroupInterest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearGroupInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/relationTypeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/sansita_regular"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="15dp"
                    android:text="@string/male"
                    android:textColor="@color/black_opacity" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sansita_regular"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="15dp"
                    android:text="@string/female"
                    android:textColor="@color/black_opacity" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonBoth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="33dp"
                    android:fontFamily="@font/sansita_regular"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="15dp"
                    android:text="@string/both"
                    android:textColor="@color/black_opacity" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonNoSpecified"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sansita_regular"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="15dp"
                    android:text="@string/no_specified"
                    android:textColor="@color/black_opacity" />

            </RadioGroup>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/relationTypeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/relationType"
            android:textColorHint="@color/black_opacity"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/black_opacity"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/black_opacity"
            app:layout_constraintBottom_toTopOf="@+id/buttonNextLooking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <AutoCompleteTextView
                android:id="@+id/exposedDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_opacity"
                android:inputType="none"
                android:paddingVertical="16dp"
                android:paddingStart="10dp"
                android:textColor="@color/black_opacity"
                android:popupBackground="@color/gray_opacity"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNextLooking"
            style="@style/RoundedButtonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:padding="16dp"
            android:text="@string/next"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
