<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_opacity"
    tools:context=".ui.phone.PhoneCodeSend">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/phone_number_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sansita_bold"
            android:text="@string/phone_number"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/black_opacity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/phoneHint"
            android:textColorHint="@color/gray_opacity"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/phone_number_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@color/black_opacity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/black_opacity"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textColor="@color/white_opacity"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/phone_number_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cornerRadius="16dp"
            app:backgroundTint="@color/black_opacity"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            android:padding="18dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sansita_bold"
            android:text="@string/send_code"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/black_opacity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/send_button"
            app:layout_constraintHorizontal_bias="0.5" />
        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/description_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
           />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
