<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_opacity"
    tools:context=".ui.Phone.CodeVerification">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/phone_verification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sansita_bold"
            android:text="@string/inserta_tu_c_digo_de_blaze"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/black_opacity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_code_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/verifyHint"
            android:textColorHint="@color/gray_opacity"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/phone_verification_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@color/black_opacity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_code_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/black_opacity"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/verification_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:textColor="@color/white_opacity"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/phone_code_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cornerRadius="16dp"
            app:backgroundTint="@color/black_opacity"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            android:padding="18dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>